--- a/Views/PieChart.xaml
+++ b/Views/PieChart.xaml
@@ -6,7 +6,7 @@
         xmlns:oxy="http://oxyplot.org/wpf"
         xmlns:local="clr-namespace:STAG.Views"
         mc:Ignorable="d"
-        Title="PieChart" Height="450" Width="800">
+        Title="PieChart" Height="Auto" Width="Auto">
     <Grid>
 
         <oxy:PlotView Model="{Binding PlotModel}"/>
